Add laptop logo favicon to page head

--- a/index.html
+++ b/index.html
@@ -5,14 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Technology Training Center for PwD - Kolkata</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Favicon - Laptop Logo -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 80'><rect x='10' y='10' width='80' height='50' rx='4' fill='%232563eb' stroke='%231e40af' stroke-width='2'/><rect x='12' y='12' width='76' height='20' rx='3' fill='%233b82f6' opacity='0.3'/><rect x='5' y='62' width='90' height='12' rx='2' fill='%231e3a8a' stroke='%230f172a' stroke-width='1.5'/><circle cx='25' cy='68' r='1.5' fill='%23475569'/><circle cx='35' cy='68' r='1.5' fill='%23475569'/><circle cx='45' cy='68' r='1.5' fill='%23475569'/><circle cx='55' cy='68' r='1.5' fill='%23475569'/><circle cx='65' cy='68' r='1.5' fill='%23475569'/><circle cx='75' cy='68' r='1.5' fill='%23475569'/><rect x='40' y='72' width='20' height='8' rx='1' fill='%2364748b' stroke='%23475569' stroke-width='0.5'/><polygon points='35,62 65,62 60,65 40,65' fill='%230f172a'/></svg>">
 </head>
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">
-                <h1>TechEmpower</h1>
-                <p class="tagline">PwD Training Center</p>
+                <svg class="logo-svg" viewBox="0 0 100 80" xmlns="http://www.w3.org/2000/svg">
+                    <!-- Laptop Screen -->
+                    <rect x="10" y="10" width="80" height="50" rx="4" fill="#2563eb" stroke="#1e40af" stroke-width="2"/>
+                    <!-- Screen Shine -->
+                    <rect x="12" y="12" width="76" height="20" rx="3" fill="#3b82f6" opacity="0.3"/>
+                    <!-- Keyboard Base -->
+                    <rect x="5" y="62" width="90" height="12" rx="2" fill="#1e3a8a" stroke="#0f172a" stroke-width="1.5"/>
+                    <!-- Keyboard Keys Pattern -->
+                    <circle cx="25" cy="68" r="1.5" fill="#475569"/>
+                    <circle cx="35" cy="68" r="1.5" fill="#475569"/>
+                    <circle cx="45" cy="68" r="1.5" fill="#475569"/>
+                    <circle cx="55" cy="68" r="1.5" fill="#475569"/>
+                    <circle cx="65" cy="68" r="1.5" fill="#475569"/>
+                    <circle cx="75" cy="68" r="1.5" fill="#475569"/>
+                    <!-- Trackpad -->
+                    <rect x="40" y="72" width="20" height="8" rx="1" fill="#64748b" stroke="#475569" stroke-width="0.5"/>
+                    <!-- Stand -->
+                    <polygon points="35,62 65,62 60,65 40,65" fill="#0f172a"/>
+                </svg>
+                <div class="logo-text">
+                    <h1>TechEmpower</h1>
+                    <p class="tagline">PwD Training Center</p>
+                </div>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
