fix menu and pictures

--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
                     <p class="tagline">PwD Training Center</p>
                 </div>
             </div>
-            <ul class="nav-menu">
+            <button class="nav-toggle" aria-label="Open menu" aria-expanded="false" aria-controls="nav-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
+            <ul class="nav-menu" id="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#programs" class="nav-link">Programs</a></li>
@@ -185,7 +190,7 @@
             
             <div class="team-grid">
                 <div class="team-card">
-                    <div class="team-avatar uma"></div>
+                    <img src="uma.jpg" alt="Uma Gayen profile picture" class="profile-img" />
                     <h3>Uma Gayen</h3>
                     <p class="role">Computer Trainer (Visually Impaired)</p>
                     <div class="team-bio">
@@ -198,7 +203,7 @@
                 </div>
 
                 <div class="team-card">
-                    <div class="team-avatar akash"></div>
+                    <img src="akash.jpg" alt="Akash Prodhan profile picture" class="profile-img" />
                     <h3>Akash Prodhan</h3>
                     <p class="role">Project Lead (Visually Impaired)</p>
                     <div class="team-bio">
@@ -311,7 +316,6 @@
                     <p class="info-item">📍 Location: Kolkata, West Bengal, India</p>
                     <p class="info-item">🌐 Serving rural candidates through partnerships</p>
                     <p class="info-item">📧 Prepared by: Mukti US and Mukti India</p>
-                    <p class="info-item">📅 Proposed Start: December 2025</p>
                 </div>
                 
                 <form class="contact-form" id="contactForm">
