--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
-                <li><a href="#programs" class="nav-link">Programs</a></li>
+                <li><a href="#project-cycle" class="nav-link">Programs</a></li>
                 <li><a href="#team" class="nav-link">Team</a></li>
                 <li><a href="#impact" class="nav-link">Impact</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
@@ -99,6 +99,66 @@
         </div>
     </section>
 
+    <!-- Project Cycle or Program -->
+    <section id="project-cycle" class="project-cycle">  
+    <section class="modules">
+        <div class="container">
+            <h2 class="section-title">Project Cycle</h2>
+            <p class="section-subtitle">We don’t just teach tools — we simulate the exam environment until candidates can perform independently.</p>
+            <div class="modules-grid">
+                <div class="module-card">
+                    <span class="module-number">1</span>
+                    <h3>Project Setup</h3>
+                    <ul class="zone-features">
+                            <li>Accessible lab infrastructure</li>
+                            <li>Configured workstations</li>
+                            <li>Internet and electricity</li>
+                            <li>UPS power backup</li>
+                            <li>Trainer and coordinator</li>
+                        </ul>
+                </div>
+                <div class="module-card">
+                    <span class="module-number">2</span>
+
+                    <h3>Activities </h3>
+                        <ul class="zone-features">
+                            <li>Word, Excel, PowerPoint fundamentals</li>
+                            <li>Exam-oriented practice</li>
+                            <li>Productivity & typing drills</li>
+                            <li>Competitive mock exams</li>
+                            <li>SSC, PSC, RRB</li>
+                        </ul>
+
+                </div>
+
+                <div class="module-card">
+                    <span class="module-number">3</span>
+                     <h3>Outcomes </h3>           
+                        <ul class="zone-features">
+                            <li>Basic computer skills</li>
+                            <li>Accessibility workflows mastered</li>
+                            <li>Navigate government websites</li>
+                            <li>Complete online applications</li>
+                            <li>Fill exam forms</li>
+                        </ul>
+                </div>
+                <div class="module-card">
+                    <span class="module-number">4</span>
+                    <h3>Impact </h3>           
+                        <ul class="zone-features">
+                            <li>Higher digital literacy</li>
+                            <li>Rural PwD inclusion</li>
+                            <li>More PwD representation</li>
+                            <li>Lower PwD unemployment</li>
+                            <li>Scalable partner model</li>
+                        </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    </section>
+
+
     <!-- Three Training Zones -->
     <section id="programs" class="programs">
         <div class="container">
@@ -108,7 +168,7 @@
             <div class="zones-grid">
                 <div class="zone-card zone-a">
                     <div class="zone-header">
-                        <h3>Zone A: Blind & Low Vision</h3>
+                        <h3>Zone A: Visually Impaired</h3>
                         <span class="zone-icon">👁️</span>
                     </div>
                     <ul class="zone-features">
@@ -148,7 +208,7 @@
         </div>
     </section>
 
-    <!-- Training Modules -->
+    <!-- Training Modules 
     <section class="modules">
         <div class="container">
             <h2 class="section-title">Our Training Curriculum</h2>
@@ -180,7 +240,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Team Section -->
     <section id="team" class="team">
@@ -228,7 +288,7 @@
             <h2 class="section-title">Measurable Impact</h2>
             <div class="impact-stats">
                 <div class="stat">
-                    <h3 class="stat-number">10-12</h3>
+                    <h3 class="stat-number">10</h3>
                     <p>Candidates per batch</p>
                 </div>
                 <div class="stat">
@@ -240,8 +300,8 @@
                     <p>Accessibility zones</p>
                 </div>
                 <div class="stat">
-                    <h3 class="stat-number">12</h3>
-                    <p>Months per year</p>
+                    <h3 class="stat-number">500+</h3>
+                    <p>PwD candidates trained</p>
                 </div>
             </div>
 
@@ -283,7 +343,7 @@
                 <div class="eligibility-column">
                     <h3>Disability Categories We Support</h3>
                     <ul class="eligibility-list">
-                        <li>Blind and Low Vision</li>
+                        <li>Visually Impaired</li>
                         <li>Locomotor Disability</li>
                         <li>Learning Disability / Dyslexia</li>
                     </ul>
@@ -314,7 +374,7 @@
                 <div class="contact-info">
                     <h3>Technology Training & Practice Exam Center</h3>
                     <p class="info-item">📍 Location: Kolkata, West Bengal, India</p>
-                    <p class="info-item">🌐 Serving rural candidates through partnerships</p>
+                    <p class="info-item">🌐 Serving PwD candidates through partnerships</p>
                     <p class="info-item">📧 Prepared by: Mukti US and Mukti India</p>
                 </div>
                 
